correct label in muon_decay from neutrino to anti-neutrino

--- a/muon_decay/muon_decay.tex
+++ b/muon_decay/muon_decay.tex
@@ -5,6 +5,6 @@
    i1 [particle=$\mu^{-}$] -- [fermion] a -- [fermion] f1 [particle=$\nu_{\mu}$],
    a -- [boson, edge label'=$W^{-}$] b,
    b -- [fermion] f2 [particle=$\ce{e-}$],
-   b -- [anti fermion] f3 [particle=$\nu_{\ce{e}}$]
+   b -- [anti fermion] f3 [particle=$\overline{\nu}_{\ce{e}}$]
 };
 \end{document}
