Fix missing fermion line and propagator

--- a/photon_interactions/compton_scattering_t.tex
+++ b/photon_interactions/compton_scattering_t.tex
@@ -2,7 +2,7 @@
 \begin{document}
     \feynmandiagram[vertical=a to b] {
         i1 [particle=$\gamma$] -- [boson] a;
-        a -- f1 [particle=$\ce{e-}$];
+        a -- [fermion1] f1 [particle=$\ce{e-}$];
         i2 [particle=$\ce{e-}$] -- [fermion1] b;
         b -- [boson] f2 [particle=$\gamma$];
         b -- [fermion1, edge label=$\ce{e}$] a;
