--- a/tikz-header.tex
+++ b/tikz-header.tex
@@ -105,3 +105,9 @@
 
 \colorlet{lightgray}{darkgray!70!white}
 \colorlet{lightergray}{darkgray!50!white}
+
+\xdefinecolor{catblue}{HTML}{1e66f5}
+\xdefinecolor{catpeach}{HTML}{fe640b}
+\xdefinecolor{catred}{HTML}{d20f39}
+\xdefinecolor{catgreen}{HTML}{40a02b}
+\xdefinecolor{catmauve}{HTML}{8839ef}
